2009-06-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-fetchFields:...): don't use the privacySqlString twice.

	* UI/MailPartViewers/UIxMailPartICalViewer.m (-storedEventObject):
	use the new "storedEventFetched" bool ivar to specify whether we
	already attempted to fetch the event from the user calendars.

	* SoObjects/SOGo/SOGoUser.m (-rolesForObject:inContext:): do not
	query the acls for the object if the current user is its owner.

	* SoObjects/SOGo/SOGoParentFolder.m (-initSubFoldersMatching:):
	renamed from "initSubFolders". Take a string argument that, if
	specified, will stop the search of folders when the name can be
	found in the folders list.

2009-06-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-davCalendarQuery:, davCalendarMultiget:): we now fetch the only
	fields that are required by the DAV query from the database
	tables.
	(-bareFetchFields:from:to:title:component:additionalFilters:,fetchFields:from:to:title:component:additionalFilters:includeProtectedInformation:):
	optimized the privacy SQL string to a single where clause based on
	the tables computed in initializeQuickTablesAclsInContext:.

	* SoObjects/Appointments/SOGoCalendarComponent.m (-valuesForKeys:)
	overriden method to speed up PROPFIND requests.

2009-06-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSArray+Utilities.m (-hasRangeIntersection):
	modified to use the range pointers rather than serialized
	representations.

2009-06-15  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-_appendCycleException:firstInstanceCalendarDateRange:fromRow:forRange:toArray:]):
	for exceptions in the date range, add the boolean key
	"isException" to the dictionary.
	(-_flattenCycleRecords:fetchRange:): renamed method (was
	-fixupCyclicRecords:fetchRange:).
