@@ -2,6 +2,9 @@
 
 	* SoObjects/Appointments/SOGoAppointmentFolder.m
 	(-fetchFields:...): don't use the privacySqlString twice.
+	The component parameter MUST be a NSString from now on. Fixed a
+	syntax problem in the where clause occuring when vtodo components
+	were requested.
 
 	* UI/MailPartViewers/UIxMailPartICalViewer.m (-storedEventObject):
 	use the new "storedEventFetched" bool ivar to specify whether we
